# scompta

./: .gitignore  LICENSE  README.rst  config.toml  envconfig  pyproject.toml  requirements.txt  setup.cfg  test_accounts.py  test_filter.py  test_transactions.py
src/scompta/: __init__.py  accounts.py  periods.py  transactions.py
src/scompta/db/: accounts.py  transactions.py
src/scompta/importer/: __init__.py  ofx.py  qif.py
src/scompta/model/: account.py  transaction.py
src/scompta/views/: accounts.py  transactions.py
src/scompta_web/: __main__.py
