[metadata]
name=scompta
version=0.1
author=Florian Dupeyron
author_email=florian.dupeyron@mugcat.fr
description=Personnal accounting made easier
long_description= file: README.rst
long_description_content_type=text/x-rst
url=https://github.com/fdmysterious/scompta
classifiers=
	Programming Language :: Python :: 3
	License :: OSI Approved :: MIT License
	Operating System :: OS Independent

[options]
package_dir =
	= src

packages = find:
python_requires = >= 3.6

install_requires =
	matplotlib==3.5.2
	money==1.3.0
	numpy==1.22.3
	pandas==1.4.2

[options.packages.find]
where = src
